# sdk-images

./: .gitignore  .gitmodules  Cargo.toml  LICENCE  README.md  params.json
.github/workflows/: build-circom-main.yaml  build-deploy-circom.yml  build-deploy-dev.yml  build-deploy.yml  build-push-deploy-circom.yml  build-push-deploy-noir.yml  build-push-noir.yml  deploy-noir.yml  manual-deploy-circom.yml  test.yml  trigger-manual-deploy-dev.yml
circom/: .dockerignore  .env.example  Cargo.toml  Deploy.s.sol  Dockerfile  README.md  foundry.toml  package.json
circom/compile/: .env.example  Cargo.toml  Dockerfile
circom/compile/src/: circuit.rs  main.rs  storage.rs
circom/contracts/: IGroth16Verifier.sol  IVerifier.sol  NFTSVG.sol  VerifierRouter.sol  ZKEmailProof.sol
circom/contracts/interfaces/: IExtractGoogleDomain_Groth16Verifier.sol  IGroth16Verifier.sol  IProofOfDevconRejection_Groth16Verifier.sol  IProofOfTwitter_Groth16Verifier.sol  IVerifier.sol
circom/contracts/src/: IGroth16Verifier.sol  ZKEmailProof.sol
circom/contracts/src/test/: TestVerifier.sol
circom/contracts/test/: ExtractGoogleDomain_Verifier.sol  MockGroth16Verifier.sol  MockVerifier.sol  ProofOfDevconRejection_Verifier.sol  ProofOfTwitter_Verifier.sol  TestVerifier.sol
circom/contracts/test/ZKEmailProof/: tokenURI.t.sol  transferFrom.t.sol
circom/generate/: .env.example  Cargo.toml  Dockerfile  package.json
circom/generate/src/: blueprint.rs  main.rs  template.rs
circom/generate/template/: template.circom.tera
circom/key-gen/: Cargo.toml  Dockerfile  nohup.out
circom/key-gen/src/: main.rs
circom/prove/: Cargo.toml  Dockerfile  proofgen.sh
circom/prove/src/: main.rs
circom/script/: Deploy.s.sol  ZKEmailProof.s.sol
circom/src/: contract.rs  db.rs  main.rs  payload.rs  template.rs
circom/templates/: template.circom.tera  template.sol.tera
circom/test/contracts/: BaseTest.t.sol  TestVerifierHarness.sol
circom/test/contracts/TestVerifier/: convertPackedFieldsToPublicOutput.t.sol  decodePublicOutputs.t.sol  validateOwner.t.sol  verify.t.sol  verifyAndMint.t.sol
circom/test/contracts/VerifierRouter/: _VerifierRouterBase.t.sol  getVerifierInfo.t.sol  isVerifierRegistered.t.sol  registerVerifier.t.sol  unregisterVerifier.t.sol  updateVerifier.t.sol  verify.t.sol
circom/test/contracts/ZKEmailProof/: BaseTest.t.sol  ZKEmailProof.t.sol  addVerifier.t.sol  getMetadata.t.sol  mintProof.t.sol  removeVerifier.t.sol  safeMint.t.sol  tokenURI.t.sol  transferFrom.t.sol
circom/test/contracts/fork/: ZKEmailProof.t.sol  ZKEmailProof_ExtractGoogleDomain.t.sol  ZKEmailProof_ProofOfDevconRejection.t.sol  ZKEmailProof_ProofOfTwitter.t.sol
circom/verifier/: Cargo.toml  Dockerfile  config.example.json  foundry.toml  package.json  remappings.txt
circom/verifier/src/: chain.rs  config.rs  contract.rs  db.rs  main.rs  payload.rs
circom/verifier/template/: contract.sol.tera
circom/verifier/templates/: contract.hbs
contracts/broadcast/ZKEmailProof.s.sol/84532/: run-1732711124.json  run-latest.json
contracts/script/: ZKEmailProof.s.sol
contracts/src/: ZKEmailProof.sol
contracts/src/test/: TestVerifier.sol
contracts/test/ZKEmailProof/: ZKEmailProof.t.sol  safeMint.t.sol  tokenURI.t.sol  transferFrom.t.sol
noir/: .dockerignore  .env.example  Cargo.toml  Dockerfile  Nargo.toml  Nargo.toml.txt  README.md  based.txt  params.json
noir/src/: circuit_generator.rs  db.rs  filesystem.rs  handlers.rs  lib.rs  main.rs  models.rs  payload.rs  regex_generator.rs  template.rs
noir/templates/: template.nr.tera
sdk-utils/: Cargo.toml  build.rs
sdk-utils/proto/: blueprint.proto
sdk-utils/src/: blueprint.rs  command.rs  lib.rs  proto_types.rs  storage.rs
