[package]
name = "circom"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
dotenv = "0.15.0"
tokio = { version = "1.40.0", features = ["full"] }
relayer-utils = { git = "https://github.com/zkemail/relayer-utils", rev = "728b8f643a6c9a1e5b400be6407727851cc8c92c" }
slog = { version = "2.7.0", features = [
    "max_level_trace",
    "release_max_level_warn",
] }
sdk-utils = { workspace = true }
serde = "1.0.215"
base64 = "0.22.1"
serde_json = "1.0.133"
regex = "=1.10.6"
zk-regex-compiler = { git = "https://github.com/zkemail/zk-regex", rev = "00d72a78835af064b113591797840f1be7f9267c" }
tera = "1.20.0"
rand = "0.8.5"
sqlx = { version = "0.8.2", features = [
    "postgres",
    "runtime-tokio",
    "migrate",
    "uuid",
    "time",
    "chrono",
    "runtime-tokio-rustls",
] }
prost = "0.13"
prost-wkt = "0.6"
prost-wkt-types = "0.6"
prost-types = "0.11"
