[package]
name = "noir"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
regex = "1.10.6"
serde = "1.0.215"
serde_json = "1.0.133"
tera = "1.20.0"
tokio = { version = "1.44.2", features = ["full"] }
sqlx = { version = "0.8.2", features = [
    "postgres",
    "runtime-tokio",
    "migrate",
    "uuid",
    "time",
    "chrono",
    "runtime-tokio-rustls",
] }
relayer-utils = { git = "https://github.com/zkemail/relayer-utils", rev = "025405a620dfacb33084b705e2f3424a4db78a04" }
sdk-utils = { workspace = true }
slog = { version = "2.7.0", features = [
    "max_level_trace",
    "release_max_level_warn",
] }
zk-regex-compiler = { git = "https://github.com/zkemail/zk-regex", rev = "a2ce67ff8ae667bc7846cf8920d7d866f2f02d4c" }
base64 = "0.22.1"
dotenv = "0.15.0"
axum = "0.8.3"

[dev-dependencies]
prost-wkt-build = "0.6"
prost-wkt-types = "0.6"
prost-types = "0.11"
mockall = "0.12.1"
