[package]
name = "sdk-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
relayer-utils = { git = "https://github.com/zkemail/relayer-utils", rev = "728b8f643a6c9a1e5b400be6407727851cc8c92c" }
slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_warn"] }
reqwest = { version = "0.12.8", features = ["json"] }
serde = {version = "1.0.214", features = ["derive"]}
uuid = { version = "1.11.0", features = ["serde"] }
prost = "0.13"
prost-wkt = "0.6"
prost-wkt-types = "0.6"
prost-types = "0.11"


[build-dependencies]
prost-build = "0.13"
prost-wkt-build = "0.6"

