[package]
name = "sdk-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
relayer-utils = { git = "https://github.com/zkemail/relayer-utils", tag = "0.4.2" }
slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_warn"] }
reqwest = { version = "0.12.8", features = ["json"] }
serde = "1.0.214"
uuid = { version = "1.11.0", features = ["serde"] }
