[package]
name = "circom-compile"
authors = ["Aditya Bisht"]
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
dotenv = "0.15.0"
tokio = { version = "1.40.0", features = ["full"] }
relayer-utils = { version = "0.4.2", git = "https://github.com/zkemail/relayer-utils" }
slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_warn"] }
sdk-utils = { git = "https://github.com/zkemail/sdk-images", branch = "main" }
serde_json = "1.0.132"
