[package]
name = "generate"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
dotenv = "0.15.0"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
tera = "1.20.0"
tokio = { version = "1.41.0", features = ["full"] }
zk-regex-compiler = { git = "https://github.com/zkemail/zk-regex", branch = "main" }
sdk-utils = { git = "https://github.com/zkemail/sdk-images", branch = "main" }