[package]
name = "circom-key-gen"
authors = ["Aditya Bisht"]
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
dotenv = "0.15.0"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
relayer-utils = { version = "0.4.2", git = "https://github.com/zkemail/relayer-utils" }
slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_warn"] }
sdk-utils = { path = "../../sdk-utils" }
rand = "0.8.5"
regex = "1.10.6"
