[package]
name = "prove"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
dotenv = "0.15.0"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
sdk-utils = { git = "https://github.com/zkemail/sdk-images", branch = "main" }
slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_warn"] }
relayer-utils = { version = "0.4.2", git = "https://github.com/zkemail/relayer-utils" }