[package]
name = "circom-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
relayer-utils = { version = "0.4.2", git = "https://github.com/zkemail/relayer-utils" }
slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_warn"] }
sdk-utils = { path = "../../sdk-utils" }
handlebars = "6.1.0"
serde = "1.0.213"
serde_json = "1.0.132"
regex = "1.11.0"
