[package]
name = "circom-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
tokio = { version = "1.40.0", features = ["full"] }
relayer-utils = { version = "0.4.2", git = "https://github.com/zkemail/relayer-utils" }
slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_warn"] }
sdk-utils = { git = "https://github.com/zkemail/sdk-images", branch = "main" }
handlebars = "6.1.0"
serde = "1.0.213"
serde_json = "1.0.132"
regex = "1.10.6"
tera = "1.20.0"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "migrate", "uuid", "time", "chrono", "runtime-tokio-rustls"] }
dotenv = "0.15.0"
base64 = "0.22.1"

